--- a/src/components/contact/index.module.css
+++ b/src/components/contact/index.module.css
@@ -19,7 +19,7 @@
 
 .subtitle {
   line-height: 150%;
-  color: var(--greyText);
+  color: var(--white);
   margin-top: 24px;
   display: inline-block;
 }
@@ -62,6 +62,9 @@ input {
   bottom: -20px;
   font-size: 12px;
   color: red;
+}
+.footerH {
+  color: var(--primary);
 }
 
 @media screen and (max-width: 768px) {
