--- a/src/components/footer/index.module.css
+++ b/src/components/footer/index.module.css
@@ -56,6 +56,9 @@
   display: block;
   color: var(--greyText);
 }
+.footerH {
+  color: var(--primary);
+}
 
 @media screen and (max-width: 768px) {
   .links,
