--- a/src/components/hero/index.module.css
+++ b/src/components/hero/index.module.css
@@ -11,11 +11,13 @@
   width: 100%;
 }
 .name {
+  position: relative;
   font-size: 65px;
   white-space: nowrap;
   font-weight: 700;
 }
 .location {
+  position: relative;
   color: var(--primary);
   font-size: 76px;
   font-style: normal;
@@ -24,6 +26,7 @@
   display: inline-block;
 }
 .info {
+  position: relative;
   font-size: 18px;
   font-style: normal;
   font-weight: 400;
@@ -35,13 +38,23 @@
   position: relative;
   height: 100%;
   max-width: 750px;
-  background-image: url(../../images/hero.JPG);
-  background-position: center;
+  background-image: url(../../images/HeroPhoto.jpg);
+  background-position: top;
   background-size: cover;
   overflow: hidden;
   background-repeat: no-repeat;
   opacity: 0.9;
   z-index: 1;
+}
+.imgHero::after {
+  content: " ";
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.2);
+  pointer-events: none;
 }
 .containerImg {
   width: calc(100% - 50% - 40px);
@@ -56,6 +69,16 @@
 }
 .infoContainerMob {
   display: none;
+}
+
+.heroBackground {
+  width: 100%;
+  height: 100%;
+  top: 7px;
+  left: -22px;
+  position: absolute;
+  border-radius: 9%;
+  backdrop-filter: blur(2.2px);
 }
 @media screen and (max-width: 1240px) {
   .name {
