--- a/src/components/skillset/index.module.css
+++ b/src/components/skillset/index.module.css
@@ -18,7 +18,7 @@
 }
 .otherList {
   display: flex;
-  padding-bottom: 120px;
+  padding-top: 120px;
   justify-content: space-between;
   gap: 24px;
   flex-wrap: wrap;
