--- a/src/components/socialLinks/index.module.css
+++ b/src/components/socialLinks/index.module.css
@@ -15,13 +15,14 @@
 }
 .title {
   margin-bottom: 24px;
+  color: var(--primary);
 }
 .text {
   color: var(--white);
   display: inline-block;
 }
 .rightSide {
-  background-image: url(../../images/me.png);
+  background-image: url(../../images/LinkPhoto.png);
   background-position: center;
   background-size: cover;
   width: 41%;
