--- a/src/components/projects/index.module.css
+++ b/src/components/projects/index.module.css
@@ -1,7 +1,6 @@
 .wrapperProject {
   position: relative;
   z-index: 1;
-  background-color: var(--black);
   padding-top: 120px;
   padding-bottom: 60px;
   display: flex;
@@ -10,6 +9,8 @@
   max-width: 1440px;
   margin-left: auto;
   margin-right: auto;
+}
+.background {
   background: linear-gradient(
     to bottom,
     rgba(60, 138, 103, 0.5),
